<resources>
    <string name="app_name">NUMAD16S-SanatChugh</string>
    <string name="button_error">Generate Error</string>
    <string name="button_about">About</string>
    <string name="button_ttt">Tic Tac Toe</string>
    <string name="button_dict">Dictonary</string>
    <string name="clear_text">Clear</string>
    <string name="button_quit">Quit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tic_tac_toe">TicTacToe</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name2">UT3</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="long_app_name2">Scraggle WordGame</string>
    <string name="action_settings2">Settings</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_title2">About Scraggle WordGame</string>
    <string name="clear_me">Clear Text</string>
    <string name="acknowledgement">Acknowledgements</string>
    <string name="returnback">Return to Menu</string>
    <string name="about_text">\

This game is played just like regular Tic Tac Toe with one difference: to

win a tile you have to win a smaller game of Tic Tac Toe inside that tile.\n\

\n\

A tie happens when there are no further moves. In the case of a tie in a small

board, that will count as a win for both sides in the larger game.

</string>
    <string name="about_text2">\

This game is a combination of two word games, Scrabble and Boggle.\n\
        Give the game a shot, its really easy!

</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>

    <string name="title_activity_fullscreen">Test Dictionary</string>
    <string name="title_activity_dictonary">Test Dictionary</string>
    <string name="button_scrg">Scraggle</string>
    <string name="main_title">Scraggle WordGame</string>
    <string name="exit_label">Quit</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="button_comm">Communication</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="send_label">Send</string>
    <string name="clear_label">Clear</string>
    <string name="title_communication">Communication</string>
    <string name="username">username</string>
    <string name="button_speech">Speech Recognition</string>
    <string name="action_settingss">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_speech_recognition">Speech Reconition</string>
    <string name="title_thetrickiestpart">The Trickiest Part</string>
    <string name="speech_toggle">Toggle to Speak</string>
    <string name="title_full_screen_speech">Full Screen Speech</string>
    <string name="dialog_button_label">DialogOKButton</string>
    <string name="title_finalproject">Final Project</string>
</resources>
